Check for doubles that fit in ints in JSOP_GETELEM slow paths (bug 604905, r=luke).